Design Refresh - Sticky Footer Fix
* Add a pad css class that simply takes up 100% height and 16.67%
  (approximately 2 columns) of the width. This spacer hides for small.
* Designers were looking for a white background fill when the content
  is too short to fill up the space to the footer.

--- a/app/assets/stylesheets/ama_layout/layout_components/footer.scss
+++ b/app/assets/stylesheets/ama_layout/layout_components/footer.scss
@@ -10,6 +10,21 @@
   flex: 1;
 }
 
+// Spacer for the side-nav with a white background
+.pad{
+  @include breakpoint(medium down){
+    display: none;
+  }
+
+  height: 100%;
+  width: 16.67%;
+  position: absolute;
+
+  &.white{
+    background-color: $white;
+  }
+}
+
 // Footer styles
 .page-footer{
   background: $brand-blue-light;
