--- a/app/assets/stylesheets/ama_layout/layout_components/sidebar.scss
+++ b/app/assets/stylesheets/ama_layout/layout_components/sidebar.scss
@@ -1,7 +1,3 @@
-.off-canvas{
-  height: 100%;
-}
-
 .side-nav{
   background: $white;
   @include grid-column(2,0);
